--- a/#boostfolia/style.css
+++ b/#boostfolia/style.css
@@ -10,6 +10,15 @@ body,
     box-sizing: border-box;
 }
 
+button,
+h6,
+h1,
+a,
+img,
+.searchbar {
+    cursor: pointer;
+}
+
 /*Slider*/
 .wrap {
     position: relative;
@@ -24,15 +33,15 @@ body,
 }
 
 .slide1 {
-    background-image: url(img/1.jpeg);
+    background-image: url(../img/1.jpeg);
 }
 
 .slide2 {
-    background-image: url(img/2.jpeg);
+    background-image: url(../img/2.jpeg);
 }
 
 .slide3 {
-    background-image: url(img/5.jpeg);
+    background-image: url(../img/5.jpeg);
 }
 
 .slide-content {
@@ -366,25 +375,25 @@ header {
     justify-content: center;
 }
 
-.figure {
+.square {
     display: inline-grid;
     grid-column-gap: 3vh;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);
 }
 
-.figure_menu {
+.square_menu {
     background-color: #dedfe0;
     border-radius: 5%;
-    width: 40vh;
-    height: 100%;
+    width: 45vh;
+    height: 90%;
     display: inline-grid;
     text-align: center;
     perspective: 200vh;
     transform-style: flat;
 }
 
-.figure_menu p {
+.square_menu p {
     font-family: "regular";
     height: auto;
     text-align: center;
@@ -393,17 +402,17 @@ header {
     opacity: 0;
 }
 
-.figure_menu h6 {
+.square_menu h6 {
     transform: translateY(50%);
     transition: 0.5s;
 }
 
-.figure_menu:hover p {
+.square_menu:hover p {
     opacity: 1;
     transform: rotateX(35deg) translateZ(-5px);
 }
 
-.figure_menu:hover h6 {
+.square_menu:hover h6 {
     transform: translateY(0);
 }
 
@@ -437,26 +446,23 @@ header {
     display: inline-grid;
     position: relative;
     top: 10vh;
-    bottom: 10vh;
 }
 
 .row_video {
     display: inline-grid;
-    position: relative;
-    justify-content: space-around;
     grid-template-columns: 1fr 1fr;
+    width: 100%;
     height: auto;
 }
 
 .video_block {
-    display: block;
+    display: grid;
     position: relative;
 }
 
 video {
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .text_block {
@@ -464,6 +470,7 @@ video {
     align-content: center;
     text-align: center;
     background-color: #2a2629;
+    width: 100%;
     height: 233.89px;
 }
 
@@ -537,16 +544,551 @@ video {
 
 .section_OURWORKS {
     display: grid;
-    top:9vh;
-    height:50vh;
-    grid-template-rows: 25vh 20vh;
+    height: auto;
+    top: 7%;
+    grid-template-rows: 30vh 20vh 10vh;
     position: relative;
+    text-align: center;
+
 }
 
 .second_block {
-    display: flex;
-    height: 100%;
+    display: inline-grid;
 }
+
+.title_menu h6 {
+    display: inline-flex;
+    position: relative;
+    font-family: "title";
+    font-size: 3vh;
+}
+
+.title_menu h6::before {
+    content: '';
+    bottom: 0;
+    width: 100%;
+    position: absolute;
+    height: 0.3vh;
+    background-color: saddlebrown;
+    transition: 1s;
+    transform: scaleX(0);
+}
+
+.title_menu h6:hover:before {
+    transform: scaleX(1);
+    cursor: pointer;
+}
+
+.menu_pictures {
+    display: inline-grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 1vh;
+    grid-row-gap: 1vh;
+    position: relative;
+    transition-delay: 1s;
+    height: auto;
+}
+
+.menu_pictures img:hover {
+    content: '';
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translate3d(50%, 50%, 2px);
+    transition: 3s;
+}
+
+.panorama_pictures {
+    top: 10vh;
+    margin-bottom: 10vh;
+    display: flex;
+    height: auto;
+    position: relative;
+    perspective: 100px;
+    justify-content: space-around;
+    transition: 3s;
+}
+
+.menu_pictures img:nth-child(10):hover,
+.menu_pictures img:nth-child(7):hover,
+.menu_pictures img:nth-child(8):hover,
+.menu_pictures img:nth-child(9):hover {
+    content: '';
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, -50%, 2px);
+
+}
+
+.menu_pictures img:nth-child(6):hover {
+    content: '';
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translate3d(50%, -50%, 2px);
+    transition: 3s;
+}
+
+.menu_pictures img:nth-child(5):hover {
+    content: '';
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, 50%, 2px);
+    transition: 3s;
+}
+
+
+/*miniSlider*/
+
+.carousel-inner {
+    top: 1vh;
+    width: 100%;
+    height: 25vh;
+}
+
+/* THIRD_BLOCK */
+
+.third_block {
+    display: grid;
+    position: relative;
+    text-align: center;
+
+}
+
+.sectoin_WHOWEARE {
+    position: relative;
+    top: 10%;
+
+}
+
+.sectoin_WHOWEARE h1 {
+    font-family: "title";
+    color: saddlebrown;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+.sectoin_WHOWEARE h1::before {
+    content: '';
+    bottom: 0;
+    width: 20%;
+    position: absolute;
+    height: 1vh;
+    background-color: saddlebrown;
+    transition-duration: 2s;
+}
+
+.sectoin_WHOWEARE h1:hover:before {
+    width: 100%;
+}
+
+.sectoin_WHOWEARE > p {
+    font-family: "regular";
+    height: auto;
+    text-align: center;
+}
+
+.myresume {
+    display: inline-grid;
+    height: 100vh;
+    width: 100%;
+    grid-template-columns: repeat(2, 50vh);
+    align-content: center;
+    justify-content: center;
+}
+
+.myteam {
+    width: 40vh;
+    height: 65vh;
+    position: relative;
+    background-color: #dedfe0;
+    display: inline-grid;
+    justify-content: center;
+    align-content: center;
+}
+
+.myteam > img {
+    width: 25vh;
+    height: 25vh;
+    margin: auto;
+    border-radius: 50%;
+    border: 0.1vh solid saddlebrown;
+}
+
+.myteam h1 {
+    font-family: regular;
+    font-size: 5vh;
+    top: 5%;
+    position: relative;
+}
+
+.myteam p {
+    font-family: light;
+    font-size: 2vh;
+}
+
+.animate_skills {
+    width: 70%;
+    top: 7%;
+    position: relative;
+}
+
+.text {
+    right: -14.5%;
+    top: 15%;
+    height: 15vh;
+    text-align: justify;
+    position: relative;
+    display: inline-grid;
+    width: 70%;
+}
+
+.myskills {
+    width: 70vh;
+    height: 65vh;
+    position: relative;
+    background-color: #dedfe0;
+    display: inline-grid;
+}
+
+.text h1 {
+    position: relative;
+    display: flex;
+    text-align: justify;
+    font-family: light;
+    font-style: italic;
+    font-size: 3vh;
+}
+
+.text p {
+    width: -70%;
+    font-family: light;
+    font-style: oblique;
+    font-size: 2vh;
+    top: -2%;
+}
+
+.animate_skills h1 {
+    font-family: title;
+    font-size: 2vh;
+    position: relative;
+    justify-content: flex-start;
+    display: flex;
+}
+
+.anime::before {
+    content: '';
+    bottom: 0;
+    border-bottom: 0.4vh solid saddlebrown;
+    position: absolute;
+    width: 0;
+    opacity: 0;
+    transition: 2s;
+}
+
+.anime:hover:before {
+    content: '';
+    position: absolute;
+    width: 70%;
+    opacity: 1;
+}
+
+.animate_skills p {
+    font-family: light;
+    position: relative;
+    height: 3vh;
+    font-size: 1.5vh;
+    justify-content: flex-end;
+    display: flex;
+}
+
+.anime {
+    align-content: flex-start;
+    position: relative;
+    animation-name: anime;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 3s;
+    animation-direction: reverse;
+    animation-iteration-count: 3;
+    animation-fill-mode: both;
+}
+
+@keyframes anime {
+    from {
+        transform: translateX(21%);
+        opacity: 1;
+    }
+
+    to {
+        transform: translateX(0%);
+        opacity: 0;
+    }
+}
+
+.sectionSomefeatures {
+    display: block;
+    position: relative;
+    background-color: #3c3a3a;
+    width: 100%;
+    height: 65vh;
+}
+
+.sectionSomefeatures h1 {
+    font-family: "light";
+    color: #fff;
+    font-size: 8vh;
+    position: relative;
+    top: 15%;
+}
+
+.iconBlock {
+    position: relative;
+    top: 20%;
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+    bottom: 10%;
+}
+
+.iconrow {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-content: center;
+
+}
+
+.iconBlock a {
+    width: 40vh;
+    height: 40vh;
+    display: grid;
+    position: relative;
+    justify-items: center;
+    align-content: center;
+}
+
+.iconBlock h6 {
+    font-size: 3vh;
+    position: relative;
+    display: grid;
+    font-family: regular;
+    color: #fff;
+}
+
+.iconBlock p {
+    font-size: 65%;
+    position: relative;
+    display: grid;
+    color: #fff;
+}
+
+< !-- FOOOOOTER !-- > .Footer {
+    display: grid;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+}
+
+.sectionGetInTouch {
+    position: relative;
+    top: 10%;
+}
+
+.FooterInput {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    margin-bottom: 7%;
+}
+
+.sectionGetInTouch h1 {
+    font-family: "title";
+    color: saddlebrown;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+.sectionGetInTouch h1::before {
+    content: '';
+    bottom: 0;
+    width: 20%;
+    position: absolute;
+    height: 1vh;
+    background-color: saddlebrown;
+    transition-duration: 2s;
+}
+
+.sectionGetInTouch h1:hover:before {
+    width: 100%;
+}
+
+.sectionGetInTouch > p {
+    font-family: "regular";
+    height: auto;
+    text-align: center;
+}
+
+.FooterWrap {
+    width: 450px;
+    margin: 0 auto;
+    position: relative;
+    display: inline-grid;
+    grid-template-rows: repeat(2, 25vh);
+    grid-template-columns: repeat(2, 60vh);
+    grid-gap: 15vh;
+}
+
+.mat-label {
+    display: block;
+    font-size: 16px;
+    transform: translateY(25px);
+    color: #e2e2e2;
+    transition: all 0.5s;
+}
+
+.mat-label span {
+    color: #bb5e1b;
+}
+
+.inputName {
+    position: relative;
+    display: grid;
+    grid-column: 1 / 2;
+}
+
+.inputMail {
+    position: relative;
+    display: grid;
+    grid-column: 2 / 3;
+
+}
+
+.inputMessage {
+    position: relative;
+    display: grid;
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
+    text-align: center;
+}
+
+.mat-input {
+    position: relative;
+    background: transparent;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 8px 0;
+    font-size: 16px;
+}
+
+.mat-div {
+    padding: 30px 0 0 0;
+    position: relative;
+}
+
+.mat-div:after,
+.mat-div:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #e2e2e2;
+    bottom: 0;
+    left: 0;
+    transition: all 0.5s;
+}
+
+.mat-div::after {
+    background-color: #bb5e1b;
+    transform: scaleX(0);
+}
+
+.is-active::after {
+    transform: scaleX(1);
+}
+
+.is-active .mat-label {
+    color: saddlebrown;
+}
+
+.is-completed .mat-label {
+    font-size: 12px;
+    transform: translateY(0);
+}
+
+button {
+    background-color: #bb5e1b;
+    color: #fff;
+    border: none;
+    display: block;
+    cursor: pointer;
+    height: 10vh;
+    width: 45vh;
+}
+
+.FooterButton {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 17%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -562,35 +1104,35 @@ video {
 
 @font-face {
     font-family: "title";
-    src: url(fonts/10089.ttf);
+    src: url(../fonts/10089.ttf);
     font-style: normal;
     font-weight: bold;
 }
 
 @font-face {
     font-family: "regular";
-    src: url(fonts/Roboto-Thin.ttf);
+    src: url(../fonts/Roboto-Thin.ttf);
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: "light";
-    src: url(fonts/Roboto-Light.ttf);
+    src: url(../fonts/Roboto-Light.ttf);
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: "bold";
-    src: url(fonts/RobotoCondensed-Bold.ttf);
+    src: url(../fonts/RobotoCondensed-Bold.ttf);
     font-style: normal;
     font-weight: bold;
 }
 
 @font-face {
     font-family: "icon";
-    src: url(fonts/Pe-icon-7-stroke.ttf);
+    src: url(../fonts/Pe-icon-7-stroke.ttf);
     font-style: normal;
     font-weight: normal;
 }
